# AgentWhisper

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  build-deb.sh  install.sh  pyproject.toml  requirements.txt  uninstall.sh
docs/: index.html
packaging/: agentwhisper.desktop  setup-venv.sh
src/agentwhisper/: __init__.py  audio.py  autostart.py  cli.py  config.py  daemon.py  hotkey.py  ipc.py  settings.py  state.py  tray.py  visualizer.py
src/agentwhisper/desktop/: base.py  x11.py
src/agentwhisper/engines/: base.py  whisper_local.py
tests/: helpers.py  test_autostart.py  test_config.py  test_daemon.py  test_desktop.py  test_engine_status.py  test_ipc.py  test_no_pyav.py  test_pipeline.py  test_residency.py  test_settings.py  test_state.py  test_tray_icons.py
