[project]
name = "agentwhisper"
version = "0.5.3"
description = "Rock-solid push-to-talk voice dictation for Linux, daemon + clients architecture"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Chris Schroedinger", email = "259315013+ChrisSchroedinger@users.noreply.github.com" }]
keywords = ["dictation", "whisper", "speech-to-text", "voice", "linux"]
dependencies = [
    "faster-whisper>=1.0",
    "python-xlib>=0.33",
    "sounddevice>=0.4",
    "numpy>=1.26",
]

[project.urls]
Repository = "https://github.com/ChrisSchroedinger/agentwhisper"

[project.scripts]
agentwhisper = "agentwhisper.cli:main"
agentwhisperd = "agentwhisper.daemon:main"

[tool.uv]
# The tray needs the system Python (Debian's python3-gi is built for it);
# never silently substitute a uv-managed standalone interpreter.
python-preference = "only-system"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentwhisper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# So test modules can share helpers via `from tests.helpers import ...`
# regardless of how pytest was invoked.
pythonpath = ["."]
addopts = "-q"
markers = [
    "slow: spawns an interpreter or loads a real model (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
